--- a/Ludo.vcxproj.filters
+++ b/Ludo.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Ludo.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="board&amp;pawns.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="board&amp;pawns.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
